<?xml version="1.0"?>
<package format="2">
  <name>simrad_ek80</name>
  <version>0.0.0</version>
  <description>Driver for interfacing with a Simrad EK80 Echosounder</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

